# rememdia

./: .gitignore  Makefile  README.md  TODO.md  compose.yml  pyproject.toml
api/: api.py  database.py  helpers.py  models.py
cli/: Dockerfile  Makefile  pyproject.toml  tui.py  tui.tcss
cli/modules/: link.py  note.py
rememdia_api/: .env.example  Dockerfile  Makefile  TODO.md  api.py  database.py  helpers.py  models.py  pyproject.toml  settings.py
rememdia_api/routers/: links.py  notes.py
rememdia_api/services/: links.py
rememdia_api/tests/: first_test.py  test_database.py  test_links.py  test_notes.py
