[project]
name = "rememdia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi[standard]>=0.115.6",
    "sqlalchemy[asyncio]>=2.0.37",
    "textual-dev>=1.7.0",
    "textual>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.31.0",
    "requests>=2.32.3",
]
