[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "httpx>=0.28.1",
    "textual-dev>=1.7.0",
    "textual>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.32.0",
    "requests>=2.32.3",
]
