[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "beautifulsoup4>=4.13.3",
    "fastapi[standard]>=0.115.6",
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "sqlalchemy[asyncio]>=2.0.37",
    "textual-dev>=1.7.0",
    "textual>=1.0.0",
    "asgi-lifespan>=2.1.0",
    "pytest-mock>=3.14.0",
    "apscheduler>=3.11.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.31.0",
    "requests>=2.32.3",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
